<resources>
    <string name="app_name">CarrerQuestApplication</string>

    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_a_user_login_here">Already a User? Login Here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account. Register here.</string>
    <string name="logout">Logout</string>
    <string name="enter_course_name">Enter Name</string>
    <string name="enter_course_price">Enter Tips Price</string>
    <string name="course_suited_for">Enter Job</string>
    <string name="course_image_link">Qualification</string>
    <string name="enter_course_link">Salary wanted</string>
    <string name="course_description">Description</string>
    <string name="add_course">Add Details</string>
    <string name="add_icon">add icon</string>
    <string name="course_image"> Image</string>
    <string name="course_hero_image"> Hero Image</string>
    <string name="edit_course">Edit Tips</string>
    <string name="delete_course">Delete Tips</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
</resources>