<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A4965"
    tools:context=".AddApplication">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="89dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_course_name"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCourseName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_course_price"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/course_suited_for"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCourseSuitedFor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/course_image_link"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCourseImageLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_course_link"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCourseLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:hint="@string/course_description"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCourseDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="false"
                    android:gravity="top"
                    android:inputType="textMultiLine|textImeMultiLine"
                    android:singleLine="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/black"
                android:text="@string/add_course"
                android:textAllCaps="false" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>